--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons": "0.0.11",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.1.0-beta.24",
@@ -30,8 +31,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "jsoneditor": "^9.5.6",
+    "nodemon": "^2.0.14",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "ts-node": "^10.4.0",
     "typescript": "~4.1.5"
   }
 }
